logo fixed on mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -469,11 +469,7 @@ h6 {
 .section-bg {
   background: #ecf5ff;
 }
-.logo{
-  width: 420px;
-  height: 420px;
-  margin-left: 80px;
-}
+
 
 /* About Us Section
 --------------------------------*/
